Move away from Bitbucket v1 to v2 (#1565)
* Move away from Bitbucket v1 to v2
* also use swagger
* their swagger is broken for codegen due to https://github.com/swagger-api/swagger-codegen/issues/5562